--- a/configtemp.json
+++ b/configtemp.json
@@ -5,5 +5,9 @@
     "PAYPAL_SECRET": "",
     "PAYPAL_MODE":"",
     "CLIENT_ID": "",
-    "CLIENT_ID_2": ""
+    "CLIENT_ID_2": "",
+    "mailHost": "",
+    "mailPort": "",
+    "mailUsername": "",
+    "mailPassword": ""
 }
